# syn-flood-ddos-detection

./: .gitignore  README.md  pyproject.toml  run.sh
src/: analyze.py  dataset.py  main.py  post_process_results.py  settings.py  simulate.py
src/dcs/: __init__.py  hash.py  sketch.py  test.py  utils.py
src/ddos_dataset/: __init__.py  balanced_ddos.py  dataset.py  synth_ddos.py
summarized/: zipf_1.25_results.csv  zipf_1.5_results.csv  zipf_2.0_results.csv
