[tool.poetry]
name = "syn-flood-ddos-attack-detection"
version = "0.1.0"
description = "TCP SYN Flood DDoS attack detection"
authors = ["Shay Sirek", "Tomer Hadad"]
readme = "README.md"
packages = [{include = "syn_flood_ddos_attack_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
